<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diff_drive_bot</name>
  <version>0.0.0</version>
  <description>Differential Drive Robot</description>
  <maintainer email="A02307138@aggies.usu.edu">Nate Herbst</maintainer>
  <license>Public</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <!-- <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend> -->
  <!-- <exec_depend>diff_drive_bot</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
